prevent white space from scrollbar when os x system preference 'show scroll bars: always' is selected

--- a/app/src/component/app/app.css
+++ b/app/src/component/app/app.css
@@ -19,6 +19,9 @@
   .content.lock {
     overflow: auto;
   }
+  .playlist-enter-done {
+    overflow-y: hidden;
+  }
 }
 
 
